fixed z-index stuff

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -129,11 +129,10 @@ a:focus {
   width:100%;
   height: 90%;
   border-radius: 5px;
-  z-index: 2000;
 }
 
 .pear-image-container:hover{
-  filter: brightness(250%);
+  filter: brightness(25%);
   cursor: pointer;
 }
 
@@ -146,7 +145,6 @@ a:focus {
 .pear-content {
   flex: 1 10 20%;
   position: relative;
-  z-index: 2010;
   background-color: white;
 }
 
